Changes from day 10

--- a/6_pigGame/index.html
+++ b/6_pigGame/index.html
@@ -27,13 +27,13 @@
                 <p class="current-score" id="current--1">0</p>
             </div>
         </section>
-
+        <!-- comentario-->
         <img src="img/dice-5.png" alt="Playing dice" class="dice" />
         <button class="btn btn--new">🔄 New game</button>
         <button class="btn btn--roll">🎲 Roll dice</button>
         <button class="btn btn--hold">📥 Hold</button>
     </main>
-    <script src="scriptLearn.js"></script>
+    <script src="Untitled-1.js"></script>
 </body>
 
 </html>
