--- a/2_fundamental1/index.html
+++ b/2_fundamental1/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="../resources/css/style.css">
-    <title>JavaScript Fundamentals – Part 1</title>
+    <link rel="stylesheet" type="text/css" href="../resources/css/style.css" />
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
+  </head>
 
-</head>
-
-<body>
+  <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
-    <script src="script.js"></script>
-</body>
 
+    <h1>To Do List</h1>
+    <form action="" class="container" id="form" data-new-list-form>
+      <input data-new-list-input type="text" id="input" />
+      <button id="add">+</button>
+    </form>
+    <div class="to-dos" id="toDoContainer" data-lists></div>
+    <script src="script.js"></script>
+  </body>
 </html>
